# zero2prod

./: .gitignore  Cargo.toml  README.md  config.yaml  deny.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20250306084225_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
